# git-account-switcher

./: Cargo.toml  LICENSE  README.md
src/: config.rs  credential.rs  github_auth.rs  i18n.rs  main.rs  ops.rs
tests/: cli_tests.rs
wix/: License.rtf  main.wxs
