[package]
name = "gas"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Tonari-no-usagi"]
description = "A lightweight Git credential helper to manage multiple accounts on Windows."

[dependencies]
# CLI引数解析
clap = { version = "4.4", features = ["derive"] }
# エラーハンドリング
anyhow = "1.0"
# 設定ファイルの読み書き
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# パス操作
dirs = "5.0"
# 対話入力
dialoguer = "0.11"
# Windows資格情報マネージャー操作
keyring = "2"
# ログ出力（今回はstderrへの出力管理に使用）
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
webbrowser = "1.0.6"
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
assert_cmd = "2.0"
predicates = "3.1"
